--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ Django==4.2
 django-cors-headers==3.14.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
-Pillow==9.5.0
 pycodestyle==2.10.0
 python-decouple==3.8
 pytz==2023.3
